--- a/app/src/main/res/drawable/duanzi_b.xml
+++ b/app/src/main/res/drawable/duanzi_b.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:drawable="@drawable/raw_1500085899"/>
+    <item android:state_checked="true" android:drawable="@drawable/duanzi2"/>
 
-    <item android:state_checked="false" android:drawable="@drawable/raw_1500085327"/>
+    <item android:state_checked="false" android:drawable="@drawable/duanzi1"/>
 
 </selector>
