--- a/app/src/main/res/drawable/tuijian_b.xml
+++ b/app/src/main/res/drawable/tuijian_b.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:drawable="@drawable/raw_1500085367"/>
+    <item android:state_checked="true" android:drawable="@drawable/tuijian2"/>
 
-    <item android:state_checked="false" android:drawable="@drawable/raw_1500083878"/>
+    <item android:state_checked="false" android:drawable="@drawable/tuijian1"/>
 </selector>
