--- a/app/src/main/res/layout/tremen.xml
+++ b/app/src/main/res/layout/tremen.xml
@@ -6,5 +6,13 @@
     >
 
 
+    <com.youth.banner.Banner
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/banner"></com.youth.banner.Banner>
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recv_hot"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
