--- a/app/src/main/res/layout/item_recv.xml
+++ b/app/src/main/res/layout/item_recv.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fresco="http://schemas.android.com/tools"
+    xmlns:face="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
@@ -14,7 +15,7 @@
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/rc_img"
             android:layout_width="50dp"
-            fresco:roundAsCircle="true"
+            face:roundAsCircle="true"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:src="@mipmap/ic_launcher" />
