--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,4 +50,9 @@
         android:textColor="#ffffff"
         android:text="其他登录方式" />
 
+    <ImageView
+        android:id="@+id/login_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/raw_1500019926"/>
 </RelativeLayout>
