--- a/app/src/main/res/layout/item_recv.xml
+++ b/app/src/main/res/layout/item_recv.xml
@@ -61,11 +61,11 @@
         android:textColor="@android:color/black"
         android:textSize="20dp" />
 
-    <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
         android:id="@+id/video"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
 
 
     <View
