--- a/app/src/main/res/layout/tuijian_fragment.xml
+++ b/app/src/main/res/layout/tuijian_fragment.xml
@@ -21,6 +21,7 @@
                 android:button="@null"
                 android:textSize="30dp"
                 android:textColor="@drawable/item"
+                android:checked="true"
                 android:text="热门"/>
 
             <RadioButton
