--- a/app/src/main/res/layout/activity_it.xml
+++ b/app/src/main/res/layout/activity_it.xml
@@ -92,6 +92,11 @@
         android:textColor="#ffffff"
         android:textSize="20dp" />
 
+    <ImageView
+        android:id="@+id/it_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/raw_1500019926"/>
 
 
 </RelativeLayout>
