--- a/app/src/main/res/layout/activity_regin.xml
+++ b/app/src/main/res/layout/activity_regin.xml
@@ -80,6 +80,10 @@
         android:textColor="#ffffff"
         android:textSize="20dp" />
 
-
+    <ImageView
+        android:id="@+id/regin_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/raw_1500019926"/>
 
 </RelativeLayout>
