--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -14,30 +14,34 @@
         android:background="#36A9FF">
 
         <TextView
+            android:id="@+id/foll_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="返回"
             android:textColor="#ffffff"
-            android:text="返回"/>
+            android:textSize="20dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="99dp"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="#ffffff"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="100dp"
-            android:layout_gravity="center_vertical"
-            android:text="我的关注"/>
+            android:layout_weight="1"
+            android:text="我的关注"
+            android:textColor="#ffffff"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="#ffffff"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="50dp"
-            android:text="热门关注"/>
+            android:layout_weight="1"
+            android:text="热门关注"
+            android:textColor="#ffffff"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
