--- a/app/src/main/res/layout/head.xml
+++ b/app/src/main/res/layout/head.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:gravity="center"
     android:background="@drawable/drawerlayout_background">
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/person"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_marginTop="42dp"
-        android:src="@drawable/touxiang"/>
+        fresco:roundAsCircle="true"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
