--- a/app/src/main/res/layout/include.xml
+++ b/app/src/main/res/layout/include.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/images"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/touxiang"
-        fresco:roundAsCircle="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+<merge>
+    <android.support.v7.widget.Toolbar
+        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:layout_centerHorizontal="true"
-        android:text="推荐"/>
+        android:background="#03A9F4"
+        android:id="@+id/toolbar"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/touxiang"
+                fresco:roundAsCircle="true"
+                android:id="@+id/images"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="#ffffff"
+                android:id="@+id/toolbar_title"
+                android:textSize="25dp"
+                android:text="title"
+                />
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/raw_1500034665"
-        android:layout_alignParentRight="true"/>
-
-
-
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/toolbar_image"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/raw_1500034665"/>
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+</merge>
