--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.follow.FollowActivity"
     android:orientation="vertical">
-    
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
         android:background="#36A9FF">
 
         <TextView
@@ -18,8 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
             android:text="返回"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
             android:textColor="#ffffff"
             android:textSize="20dp" />
 
@@ -28,21 +28,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="100dp"
-            android:layout_weight="1"
-            android:text="我的关注"
+            android:text="我的收藏"
+            android:layout_centerInParent="true"
             android:textColor="#ffffff"
             android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="50dp"
-            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="热门关注"
+            android:layout_alignParentRight="true"
             android:textColor="#ffffff"
+            android:layout_centerVertical="true"
             android:textSize="20dp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fmRv"
