--- a/app/src/main/res/layout/duanzi_item.xml
+++ b/app/src/main/res/layout/duanzi_item.xml
@@ -18,23 +18,33 @@
             android:layout_height="70dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text1"
-                android:layout_width="match_parent"
-                android:layout_height="35dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="妞妞喝奶" />
 
             <TextView
                 android:id="@+id/text2"
-                android:layout_width="match_parent"
-                android:layout_height="35dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="2017-06-21 14:35" />
 
         </LinearLayout>
 
+        <com.example.dell.yikezhong3.utlis.CustomerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"></com.example.dell.yikezhong3.utlis.CustomerView>
+
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/text3"
