--- a/app/src/main/res/layout/head.xml
+++ b/app/src/main/res/layout/head.xml
@@ -14,6 +14,7 @@
         fresco:roundAsCircle="true"
         />
     <TextView
+        android:id="@+id/person_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
