--- a/app/src/main/res/layout/item_recv.xml
+++ b/app/src/main/res/layout/item_recv.xml
@@ -15,10 +15,10 @@
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/rc_img"
             android:layout_width="50dp"
-            face:roundAsCircle="true"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            face:roundAsCircle="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -40,15 +40,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="2017-06-21 14:35"
-               />
+                android:text="2017-06-21 14:35" />
 
         </LinearLayout>
 
-
-
-
-
+        <com.example.dell.yikezhong3.utlis.CustomerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"></com.example.dell.yikezhong3.utlis.CustomerView>
 
 
     </RelativeLayout>
