--- a/app/src/main/res/layout/item_recv.xml
+++ b/app/src/main/res/layout/item_recv.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fresco="http://schemas.android.com/tools"
     xmlns:face="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
