--- a/app/src/main/res/layout/item_collect.xml
+++ b/app/src/main/res/layout/item_collect.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:face="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/ll"
     android:layout_height="match_parent">
 
     <RelativeLayout
