--- a/app/src/main/res/layout/shipin_layout.xml
+++ b/app/src/main/res/layout/shipin_layout.xml
@@ -48,4 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"></FrameLayout>
+
+</LinearLayout>
+
+
 </LinearLayout>
