--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -34,6 +34,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:id="@+id/remenguanzhu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
