--- a/app/src/main/res/layout/activity_xiang_qing.xml
+++ b/app/src/main/res/layout/activity_xiang_qing.xml
@@ -51,6 +51,7 @@
                     android:textSize="15dp" />
 
                 <Button
+                    android:id="@+id/guanzhu"
                     android:layout_width="184dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -60,6 +61,7 @@
                     android:text="关注" />
 
                 <ImageView
+                    android:id="@+id/dianzan"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
