--- a/app/src/main/res/layout/duanzi_item.xml
+++ b/app/src/main/res/layout/duanzi_item.xml
@@ -47,9 +47,10 @@
     </LinearLayout>
 
 
-    <TextView
+    <ImageView
         android:id="@+id/text3"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:src="@drawable/raw_1500033586"/>
 
 </LinearLayout>
