--- a/app/src/main/res/layout/activity_rmgz.xml
+++ b/app/src/main/res/layout/activity_rmgz.xml
@@ -15,6 +15,7 @@
         android:background="#03A9F4">
 
         <TextView
+            android:id="@+id/qx"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
