--- a/app/src/main/res/drawable/dian_zan.xml
+++ b/app/src/main/res/drawable/dian_zan.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="true" android:drawable="@drawable/dianzan1"></item>
-    <item android:state_checked="false" android:drawable="@drawable/dian_zan"></item>
+    <item android:state_checked="false" android:drawable="@drawable/dianzans"></item>
+    <item android:drawable="@drawable/dianzans"></item>
 </selector>
