--- a/app/src/main/res/layout/activity_xiang_qing.xml
+++ b/app/src/main/res/layout/activity_xiang_qing.xml
@@ -50,24 +50,26 @@
                     android:textColor="#0C0807"
                     android:textSize="15dp" />
 
-                <Button
+                <CheckBox
                     android:id="@+id/guanzhu"
-                    android:layout_width="184dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:textColor="#0C0807"
-                    android:background="@drawable/button_style"
-                    android:text="关注" />
+                    android:button="@null"
+                    android:background="@drawable/guanzhu"
+                     />
 
-                <ImageView
+                <CheckBox
                     android:id="@+id/dianzan"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="11dp"
-                    android:src="@drawable/dianzan" />
+                    android:button="@null"
+                    android:background="@drawable/dian_zan" />
             </RelativeLayout>
 
 
