--- a/app/src/main/res/layout/activity_my_sou.xml
+++ b/app/src/main/res/layout/activity_my_sou.xml
@@ -36,4 +36,40 @@
 
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ebebeb"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/tv"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="9"
+            android:hint="请输入ID或者钟友名" />
+        <TextView
+
+            android:layout_gravity="center"
+            android:id="@+id/start_start"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+        <Button
+            android:id="@+id/select_but"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:background="#ebebeb"
+            android:text="搜索"
+            android:textColor="#abaaa3"
+            android:textSize="20dp" />
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/select_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
