--- a/app/src/main/res/layout/activity_my_sou.xml
+++ b/app/src/main/res/layout/activity_my_sou.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.MySouActivity">
+    tools:context=".ui.select.MySouActivity">
 
 
     <RelativeLayout
@@ -44,9 +44,9 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/tv"
+            android:id="@+id/ed"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="9"
             android:hint="请输入ID或者钟友名" />
